点击欢迎面板显示浮动照片卡

--- a/src/components/FlowBorder/index.less
+++ b/src/components/FlowBorder/index.less
@@ -28,11 +28,13 @@
     border-radius: 20px;
     animation-delay: -1s;
   }
-  .box::after{
-    content: '';
+  .layer{ 
     position: absolute;
     inset: 8px;
     background-color: @layerColor;
+    // background-image: url('../../assets/img/photo.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 15px;
     border: 8px solid @layerColor;
   }
