--- a/src/components/FlowBorder/index.css
+++ b/src/components/FlowBorder/index.css
@@ -21,11 +21,12 @@
   border-radius: 20px;
   animation-delay: -1s;
 }
-.flow-border .box::after {
-  content: '';
+.flow-border .layer {
   position: absolute;
   inset: 8px;
   background-color: #f4f4f8;
+  background-size: cover;
+  background-repeat: no-repeat;
   border-radius: 15px;
   border: 8px solid #f4f4f8;
 }
