--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -11,18 +11,11 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
-.heartfade {
-  animation: heartfade 2s ease-out 1;
-  animation-fill-mode: forwards;
-}
-@keyframes heartfade {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100%{
-    opacity: 0;
-  }
+.card {
+  // opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 1s ease-out;
 }
