--- a/src/components/GradientBorder/index.css
+++ b/src/components/GradientBorder/index.css
@@ -6,6 +6,22 @@
   inset: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+  padding: 12px 0;
+}
+.gradient-border .box h3,
+.gradient-border .box p {
+  text-align: center;
+  width: 100%;
+}
+.gradient-border .box h3 {
+  font-size: 30px;
+}
+.gradient-border .box p {
+  font-size: 20px;
 }
 .gradient-border .box::before {
   content: "";
