--- a/src/components/GradientBorder/index.less
+++ b/src/components/GradientBorder/index.less
@@ -5,6 +5,21 @@
     inset: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: wrap;
+    padding: 12px 0;
+    h3, p{
+      text-align: center;
+      width: 100%;
+    }
+    h3 {
+      font-size: 30px;
+    }
+    p {
+      font-size: 20px;
+    }
   }
   .box::before {
     content: "";
