--- a/src/components/Background/index.less
+++ b/src/components/Background/index.less
@@ -11,7 +11,7 @@
     position: absolute;
     width: 120%;
     height: 100%;
-    background: url('../../assets/img/bg.jpg');
+    background: url('/img/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
